fixing gap

--- a/src/Components/SkillsTools/Skills.scss
+++ b/src/Components/SkillsTools/Skills.scss
@@ -14,7 +14,7 @@
     display: flex;
     flex-flow: wrap;
     justify-content: center;
-    gap: 24px;
+    gap: 16px;
   }
 }
 
